# saf

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: default.yaml
scripts/: saf  verify_detectors.py  verify_generators.py
src/: models.py
src/cli/: __init__.py  main.py  ui.py
src/cli/commands/: __init__.py  benchmark.py  compress.py  decompress.py  verify.py
src/detectors/: __init__.py  base.py  fractal_detector.py  pattern_matcher.py  sequence_detector.py
src/generators/: __init__.py  base.py  fractal.py  noise.py  sequence.py
src/storage/: __init__.py  compressor.py  decompressor.py  executor.py  format.py
src/utils/: __init__.py  config.py  file_io.py  hash_utils.py  logger.py  serialization.py  timer.py
src/verification/: __init__.py  benchmark.py  report.py  verifier.py
测试进度/: TEST_PLAN.md
